Sat Dec 25 10:49:56 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/ossl_pkcs5.c (ossl_pkcs5_pbkdf2_hmac): add casts.

Fri Dec 24 08:46:04 2010  Tanaka Akira  <akr@fsij.org>

	* process.c: parenthesize macro arguments.

Thu Dec 23 19:17:14 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/net/imap/cacert.pem: updated because it has been expired.

	* test/net/imap/server.crt: signed again because CA cert was expired.

Thu Dec 23 11:16:52 2010  Tanaka Akira  <akr@fsij.org>

	* parse.y: parenthesize macro arguments.

Thu Dec 23 11:00:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_check_type): check for type from extensions for ruby
	  1.8.  see [ruby-core:33797].

Thu Dec 23 08:12:59 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* lib/net/smtp.rb: refactoring Net::SMTP#esmtp= to use an
	  attr_accessor

Thu Dec 23 06:35:41 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* lib/net/smtp.rb: Net::SMTP should close the SSL connection if the
	  connection verification fails.

Thu Dec 23 01:47:58 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* NEWS: remove #object_id. [ruby-dev:42840]

Wed Dec 22 08:56:39 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* NEWS: add Module#private_constant and Module#public_constant.
	  [ruby-dev:39685][ruby-core:32698]

Wed Dec 22 07:59:23 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* NEWS: add IO#advise. [ruby-core:33110] [Ruby 1.9-Feature#4038]

Tue Dec 21 23:45:31 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* gc.c (Init_GC): move back object_id to Kernel. [ruby-dev:42840]

Tue Dec 21 12:45:16 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (target_archs): remove temporary objects.

	* enc/Makefile.in, enc/depend (clean): remove work directories.

Tue Dec 21 07:39:12 2010  Tanaka Akira  <akr@fsij.org>

	* pack.c: parenthesize macro arguments.

Tue Dec 21 06:25:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/rexml/test_contrib.rb (ContribTester#test_pos): should not