@@ -1,4 +1,6 @@
-Sat Dec 25 10:49:56 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Sat Dec 25 10:51:03 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/json/generator/generator.c (fbuffer_free): unused.
 
 	* ext/openssl/ossl_pkcs5.c (ossl_pkcs5_pbkdf2_hmac): add casts.
 
